@@ -8,6 +8,9 @@ Checking: valgrind & splint
 	
 Log:
 
+- 09/02/2005, version 3.8.8: roms
+	Some clean-up and fixes in the virtual link cables.
+
 - 25/09/2004, version 3.8.7: roms
 	Added USB direct cable support (kernel module).
 	Added USB direct cable support (lib-usb).
